--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "npm run build && next export -o _static"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "eslint-config-next": "13.0.3",
