--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "metaverse13",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
@@ -15,8 +18,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "node": "18.16.0"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
